Prevented horizontal scrolling

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@ body {
   background-color: white;
   color: black;
   font-weight: 400;
+  overflow-x: hidden;
 }
 
 p {
